# nebula-cluster

./: 00-START-HERE.md  BUILDER_REQUIREMENTS_CHECKLIST.md  COMPLETION_SUMMARY.md  CREDENTIALS_AUTOGEN.md  CREDENTIALS_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_VALIDATION.md  IMPLEMENTATION_VERIFICATION.md  MIGRATION_COMPLETION.md  PIPELINE.md  PIPELINE_ERRORS_FIXED.md  PIPELINE_FIXES.md  QUICKSTART.md  README.md  README_TESTS.md  SECURITY_IMPROVEMENTS.md  ci-main.yml  entrypoint.sh  rendered-manifests.yaml  verify-pipeline-fixes.sh
.github/workflows/: ci-1.yml  ci-2.yml  ci-3.yml  ci-4.yml  ci-5.yml  ci-combined.yml  ci-sequential.yml  helm-lint.yml  image-scan.yml  integration-tests.yml  python-quality.yml
__MACOSX/nebula-aurora-assignment/: ._README.md
nebula-aurora-assignment/: .gitignore  README.md  main.py  pyproject.toml  test_api.sh
nebula-aurora-assignment/app/: database.py  main.py  metrics.py  models.py  schemas.py
tests/: README.md  helm-integrate.sh  helm-validate.sh  integration-local.sh
wiki-chart/: Chart.yaml  README.md  values.yaml
wiki-chart/templates/: NOTES.txt  _helpers.tpl  fastapi-serviceaccount.yaml  fastapi.yaml  grafana-dashboard-provider.yaml  grafana-secret.yaml  grafana.yaml  ingress.yaml  network-policy.yaml  networkpolicy.yaml  pdb-fastapi.yaml  postgres-secret.yaml  postgres-serviceaccount.yaml  postgres.yaml  prometheus-rbac.yaml  prometheus.yaml  (+2 more)
wiki-service/: .dockerignore  .gitignore  Dockerfile  README.md  database.py  main.py  metrics.py  models.py  requirements.txt  schemas.py  test_api.py
