[project]
name = "nebula-aurora-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.0",
    "greenlet>=3.2.4",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
